Readme + App.json

--- a/app.json
+++ b/app.json
@@ -1,12 +1,9 @@
 {
   "expo": {
-    "name": "kawai-todo",
+    "name": "Kawai To Do",
+    "description": "Kawai to Do App made with React Native",
     "slug": "kawai-todo",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -18,9 +15,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     }
